next_app/src/screens/Quiz/QuizPageBuilder.module.css
.layout{
	display: flex;
	align-items: flex-start;
	justify-content: flex-start;
}
@media screen and (max-width: 1100px) {
	.area{
		grid-template-columns: 0fr 1fr 0fr;
	}
}
.container{
	position: relative;
	z-index: 2;
	display: flex;
	flex-direction: column;
}
.partition__info{
	margin-top: 50px;
}
.section{
	margin-top: 40px;
	display: flex;
	flex-direction: column;
}
.preivew{
	width: 100%;
	display: flex;
	flex-direction: column;
}
.preview__img{
	margin-top: 20px;
	max-width: 100%;
	height: auto;
	max-height: 40vh;
	width: 100%;
	object-fit: cover;
	border-radius: 7px;
}
.noimg{
	object-fit: scale-down;
}
.preview__counter{
	margin-top: 15px;
	font-size: 1rem;
	color: #000;
	opacity: 0.6;
	text-align: center;
}
.preview__button{
	cursor: pointer;
	width: fit-content;
	display: block;
	margin-top: 10px;
	text-decoration: none;
	font-size: 1.2rem;
	padding: 8px 20px;
	border-radius: 7px;
	background-color: #1F477D;
	border: 1px solid transparent;
	color: #fff;
	text-align: center;
	margin-top: 20px;
	margin-left: auto;
	margin-right: auto;
	transition: 0.3s ease-in-out background-color, 0.3s ease-in-out color, 0.3s ease-in-out border;
}
.preview__button:hover{
	transition: 0.3s ease-in-out background-color, 0.3s ease-in-out color, 0.3s ease-in-out border;
	background-color: #FFF;
    color: #1F477D;
    border: 1px solid;
}
@media screen and (max-width: 768px) {
	.preview__button{
		font-size: 1rem;
		padding: 7px 15px;
	}
}
.quiz{
	margin-top: 20px;
}
.quiz__info{
	margin-top: 10px;
	display: flex;
	align-items: center;
	justify-content: space-between;
	margin-bottom: 30px;
}
.questions__counter{
	opacity: 0.7;
	font-size: 0.9rem;
}
.quiz__progress{
	display: flex;
	align-items: center;
	gap: 0 10px;
	white-space: nowrap;
}
.progressbar{
	position: relative;
	width: 10vw;
}
.progressbar__bg{
	position: absolute;
	left: 0;
	top: 0;
	bottom: 0;
	right: 0;
	margin: auto 0;
	width: 100%;
	background-color: #F6F8FA;
	height: 0.6rem;
	border-radius: 7px;
	z-index: 2;
}
.progressbar__active{
	position: relative;
	z-index: 3;
	height: 0.6rem;
	border-radius: 7px;
	background-color: #dfe1e2;
}
.result{
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	margin: 0 auto;
}
.result__icon{
	max-width: 12vw;
	height: auto;
	margin-top: 40px;
}
.result__title{
	margin-top: 25px;
	font-size: 2.5rem;
}
.result__description{
	margin-top: 15px;
	max-width: 60%;
	margin: 0 auto;
	margin-top: 15px;
	text-align: center;
}
.result__button{
	cursor: pointer;
	width: fit-content;
	display: block;
	margin-top: 10px;
	text-decoration: none;
	font-size: 1rem;
	padding: 8px 15px;
	border-radius: 7px;
	background-color: #1F477D;
	border: 1px solid transparent;
	color: #fff;
	text-align: center;
	margin-top: 20px;
	margin-left: auto;
	margin-right: auto;
	transition: 0.3s ease-in-out background-color, 0.3s ease-in-out color, 0.3s ease-in-out border;
}
.result__button:hover{
	transition: 0.3s ease-in-out background-color, 0.3s ease-in-out color, 0.3s ease-in-out border;
	background-color: #FFF;
    color: #1F477D;
    border: 1px solid;
}

